[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://fonts/Mulish/Mulish-VariableFont_wght.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://images/Titulo.png" type="Texture" id=3]
[ext_resource path="res://sounds/GameTheme.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/sounds/button-click.mp3" type="AudioStream" id=5]
[ext_resource path="res://sounds/sounds/salto.mp3" type="AudioStream" id=6]
[ext_resource path="res://sounds/sounds/picotazo.mp3" type="AudioStream" id=7]
[ext_resource path="res://images/fondo1_png/Wallpaper.tres" type="Texture" id=8]
[ext_resource path="res://images/fondo1_png/Button2Theme.tres" type="Theme" id=10]
[ext_resource path="res://images/fondo1_png/Button3Theme.tres" type="Theme" id=11]
[ext_resource path="res://images/fondo1_png/ButtonTheme.tres" type="Theme" id=12]

[sub_resource type="DynamicFont" id=8]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/LabelButtonContainer/Label/VBoxContainer/MarginContainer2/SETTINGS:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 50, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer/LabelButtonContainer/Label/VBoxContainer/MarginContainer3/EXIT:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 50, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MarginContainer/LabelButtonContainer/Label:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MarginContainer/LabelButtonContainer/Label/VBoxContainer/MarginContainer/Play:rect_position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 50, -200 ), Vector2( 50, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("MarginContainer/LabelButtonContainer/Label/VBoxContainer/MarginContainer/Play:modulate")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.6, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("MarginContainer/LabelButtonContainer/Label/VBoxContainer/MarginContainer2/SETTINGS:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("MarginContainer/LabelButtonContainer/Label/VBoxContainer/MarginContainer3/EXIT:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("MarginContainer/LabelButtonContainer/Label:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "fade_in"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/LabelButtonContainer/Label/VBoxContainer/MarginContainer2/SETTINGS:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1.3, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 50, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer/LabelButtonContainer/Label/VBoxContainer/MarginContainer3/EXIT:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.9, 2.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 50, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MarginContainer/LabelButtonContainer/Label:rect_position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -200 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MarginContainer/LabelButtonContainer/Label/VBoxContainer/MarginContainer/Play:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.7, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 50, 0 ), Vector2( 0, 0 ), Vector2( 50, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("MarginContainer/LabelButtonContainer/Label/VBoxContainer/MarginContainer/Play:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.8, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("MarginContainer/LabelButtonContainer/Label/VBoxContainer/MarginContainer2/SETTINGS:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1.4, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("MarginContainer/LabelButtonContainer/Label/VBoxContainer/MarginContainer3/EXIT:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 2, 2.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("MarginContainer/LabelButtonContainer/Label:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.1, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="MainMenu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]
scale = Vector2( 0.5, 0.5 )

[node name="Background" type="TextureRect" parent="Node2D"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -6921.0
margin_top = -5332.0
margin_right = 6921.0
margin_bottom = 5332.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 8 )
expand = true
stretch_mode = 2

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -591.0
margin_top = -324.0
margin_right = 610.0
margin_bottom = 207.0
texture = ExtResource( 3 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -436.0
margin_top = -270.0
margin_right = 348.0
margin_bottom = 69.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LabelButtonContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 784.0
margin_bottom = 339.0

[node name="Label" type="TextureRect" parent="MarginContainer/LabelButtonContainer"]
margin_right = 784.0
margin_bottom = 339.0
size_flags_horizontal = 3
size_flags_vertical = 7
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/LabelButtonContainer/Label"]
margin_left = 115.0
margin_top = 248.0
margin_right = 809.0
margin_bottom = 561.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
custom_constants/separation = 5

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/LabelButtonContainer/Label/VBoxContainer"]
margin_right = 694.0
margin_bottom = 101.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_left = 50

[node name="Play" type="Button" parent="MarginContainer/LabelButtonContainer/Label/VBoxContainer/MarginContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 50.0
margin_right = 644.0
margin_bottom = 101.0
focus_neighbour_top = NodePath("../../MarginContainer3/EXIT")
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 12 )
custom_fonts/font = SubResource( 8 )
text = "Play"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/LabelButtonContainer/Label/VBoxContainer"]
margin_top = 106.0
margin_right = 694.0
margin_bottom = 207.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_left = 50

[node name="SETTINGS" type="Button" parent="MarginContainer/LabelButtonContainer/Label/VBoxContainer/MarginContainer2"]
margin_left = 50.0
margin_right = 644.0
margin_bottom = 101.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 11 )
custom_fonts/font = SubResource( 9 )
text = "Settings"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/LabelButtonContainer/Label/VBoxContainer"]
margin_top = 212.0
margin_right = 694.0
margin_bottom = 313.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_left = 50

[node name="EXIT" type="Button" parent="MarginContainer/LabelButtonContainer/Label/VBoxContainer/MarginContainer3"]
margin_left = 50.0
margin_right = 644.0
margin_bottom = 101.0
focus_neighbour_bottom = NodePath("../../MarginContainer/Play")
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 10 )
custom_fonts/font = SubResource( 10 )
text = "Exit"

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/fade_in = SubResource( 7 )

[node name="MainTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 15.224
autoplay = true

[node name="Picotazo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="Salto" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Button" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="mouse_entered" from="MarginContainer/LabelButtonContainer/Label/VBoxContainer/MarginContainer/Play" to="." method="FocusEntered"]
[connection signal="pressed" from="MarginContainer/LabelButtonContainer/Label/VBoxContainer/MarginContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="mouse_entered" from="MarginContainer/LabelButtonContainer/Label/VBoxContainer/MarginContainer2/SETTINGS" to="." method="FocusEntered"]
[connection signal="pressed" from="MarginContainer/LabelButtonContainer/Label/VBoxContainer/MarginContainer2/SETTINGS" to="." method="_on_SETTINGS_pressed"]
[connection signal="mouse_entered" from="MarginContainer/LabelButtonContainer/Label/VBoxContainer/MarginContainer3/EXIT" to="." method="FocusEntered"]
[connection signal="pressed" from="MarginContainer/LabelButtonContainer/Label/VBoxContainer/MarginContainer3/EXIT" to="." method="_on_EXIT_pressed"]
